# secure_ldr_pir

./: Makefile  README.md
.dev/: .env.example  compose.yaml  flake.nix
broker/: .dockerignore  .gitignore  Dockerfile  Makefile  config.json.example  crypto_bindings.h  go.mod  go.sum
broker/.dev/: .air.toml
broker/.husky/: pre-push
broker/api/: README.md
broker/cmd/decryption/: main.go
broker/cmd/rest-api/: app.go  main.go
broker/deploy/: compose.staging.yaml  staging.env.example
broker/internal/common/config/: config.go
broker/internal/common/constant/: context.go  oapi.go
broker/internal/common/crypto/: envelope.go
broker/internal/common/errors/: errors.go
broker/internal/common/httperr/: handler.go
broker/internal/common/logging/: zerolog.go
broker/internal/common/middleware/: middleware.go  oidc.go
broker/internal/iot/port/: client.go  http.go  manager.go  mqtt.go  types.go
broker/internal/utility/: http.go  types.go
broker/libcrypto/: build.rs
broker/libcrypto/src/: lib.rs
crypto/: Cargo.toml  build.rs
crypto/src/: lib.rs
decrypt_rust/: Cargo.toml
decrypt_rust/src/: main.rs
deploy/: README.md  compose.staging.yaml  staging.env.example
embedded/: .env.example  .gitignore  Cargo.toml  build.rs  diagram.json  partitions.csv  rust-toolchain.toml  wokwi.toml
embedded/.cargo/: config.toml
embedded/src/: ca.rs  main.rs  model.rs  mqtt.rs  sensor.rs  util.rs  wifi.rs
embedded/src/crypto/: encrypt.rs  key.rs  mod.rs
